# demo-android-svchook

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/cn/anxko/app/svchook/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  main.cpp
app/src/main/java/cn/anxko/app/svchook/: MainActivity.java
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/cn/anxko/app/svchook/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
